final upload- the project is ready to submit.

--- a/dashboard.html
+++ b/dashboard.html
@@ -90,12 +90,12 @@
               <div class="card-body">
                 <p class="card-text">
                   <h3 id="coins-dash">Coins: </h3>
-                  <div id="visited-animals"><h5 id="visited-animals">Visited Animals: </h5></div>
-                  <div id="feeded-animals"><h5 id="feeded-animals">Feeded Animals:</h5></div>
+                  <div><h5 id="visited-animals">Visited Animals: </h5></div>
+                  <div><h5 id="feeded-animals">Feeded Animals:</h5></div>
                 </p>
               </div>
               <div class="card-footer text-body-secondary">
-                <div id="favorite-animal"><h5 id="color">Favorite Animal</h5></div>
+                <div id="favorite-animal">Favorite Animal</div>
               </div>
             </div>
           </div>
