--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
     <script src="./main.js"></script>
   </head>
   <body>
-    <div class="container col-6">
+    <div class="container col-6 mt-5">
       <div class="row">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
